@@ -611,6 +611,13 @@
      * @var atkLock
      */
     var $m_lock = NULL;
+    
+    /**
+     * List of actions that should give success/failure feedback
+     * @access private
+     * @var array
+     */
+    var $m_feedback = array();
 
     /**
      * Default language used by Multilanguage Nodes.
@@ -2210,36 +2217,6 @@
     }
 
     /**
-     * This is the wrapper method for all http requests on a node.
-     *
-     * The method looks at the atkaction from the postvars and determines what
-     * should be done. If possible, it instantiates actionHandlers for
-     * handling the actual action.
-     *
-     * @param array $postvars The request variables for the node.
-     * @param int $flags Render flags (see class atkPage).
-     */
-    function dispatch($postvars, $flags=NULL)
-    {
-      atkdebug("atkNode::dispatch()");
-      $controller = &atkcontroller::getInstance();
-      $controller->setNode($this);
-      return $controller->dispatch($postvars, $flags);
-    }
-
-    /**
-     * Does the actual loading of the dispatch page
-     * And adds it to the page for the dispatch() method to render.
-     * @param array $postvars The request variables for the node.
-     */
-    function loadDispatchPage($postvars)
-    {
-      $controller = &atkcontroller::getInstance();
-      $controller->setNode($this);
-      $controller->loadDispatchPage($postvars);
-    }
-
-    /**
      * Render a generic page, with a box, title, stacktrace etc.
      * @param String $title The pagetitle and if $content is a string, also
      *                      the boxtitle.
@@ -2293,9 +2270,17 @@
      */
     function setFeedback($action, $statusmask)
     {
-      $controller = &atkController::getInstance();
-      $controller->setNode($this);
-      return $controller->setFeedback($action, $statusmask);
+      if (is_array($action))
+      {
+        for ($i=0, $_i=count($action); $i<$_i; $i++)
+        {
+          $this->m_feedback[$action[$i]] = $statusmask;
+        }
+      }
+      else
+      {
+        $this->m_feedback[$action] = $statusmask;
+      }
     }
 
     /**
