@@ -165,9 +165,7 @@
       {
         atkdebug("Invoking '$methodname' override on node");
         // We pass the original object as first parameter to the override. 
-        //TODO Maurice: Get approval with Ivo to change this
         array_unshift($arguments, $this);
-        //array_push($arguments, $this);
         return call_user_func_array(array(&$this->m_node, $methodname), $arguments);
       }
       else if (method_exists($this, $methodname))
