@@ -125,16 +125,16 @@
     function renderAddPage($record)
     {
       $atkaction = atkGetPostVar("atkprevaction");
-      if(!isset($atkaction)) $atkaction='add';
-
+      if(!isset($atkaction) || $atkaction == '') $atkaction='add';
+      
       $this->m_action=$atkaction;
       $this->m_node->m_action = $atkaction;
-
+      
       $page = &$this->getPage();
       $handler = &$this->m_node->getHandler($this->m_node->m_action);
       $handler->m_action = $this->m_node->m_action;
       atkdebug("atkSaveHandler::renderAddPage() " . $this->m_node->m_action);
-      $invoke = ($this->m_node->m_action=='admin' ? "action_admin" : "addPage");
+      $invoke = ($this->m_node->m_action=='admin' ? "renderAdminPage" : "addPage");
       $page->addContent($this->m_node->renderActionPage($this->m_node->m_action, $handler->invoke($invoke, $record)));
     }
 
